--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -11,8 +9,15 @@
 # production
 /build
 
+# editors
+.project
+.idea
+.*.swp
+\#*#
+
 # misc
 .DS_Store
+desktop.ini
 .env.local
 .env.development.local
 .env.test.local
